# moody

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  legacy.sln  legacy.vcxproj  legacy.vcxproj.filters
imgui/: imconfig.h
legacy/: .clang-format  README.md  TODOS.cpp  TODOS.md  app.hpp  app2.hpp  app_imgui.hpp  app_sdl.hpp  apply_rule.cpp  common.hpp  dear_imgui.hpp  edit_rule.cpp  edit_tile.cpp  examples.cpp  frame.cpp  frame_main.cpp  image.hpp  imgui.ini  legacy.vcxproj  legacy.vcxproj.filters  load_rule.cpp  main.cpp  partition.hpp  rule.hpp  rule_algo.hpp  rule_pp.hpp  rule_setter.hpp  rule_traits.hpp  save.hpp  serialize.hpp  serialize2.hpp  space.hpp  symmetric.hpp  symmetry.hpp  test.cpp  tile.hpp
rules/: README.md  ro4 a.txt  ro4 c.txt  ro4 d.txt  rul1.txt  rul10.txt  rul11.txt  rul12.txt  rul13.txt  rul14.txt  rul15.txt  rul16.txt  rul17.txt  rul18.txt  rul19.txt  rul2.txt  rul20.txt  rul21.txt  rul22.txt  rul23.txt  rul24.txt  rul25.txt  rul26.txt  rul27.txt  rul28.txt  rul29.txt  rul3.txt  rul30.txt  rul31.txt  rul32.txt  rul33.txt  rul34.txt  rul35.txt  rul36.txt  rul37.txt  rul38.txt  rul39.txt  rul4.txt  rul40.txt  rul41.txt  (+62 more)
rules/old/: ro4 b.txt  ro4 e.txt  ro4 f.txt  sym b.txt  sym c.txt  sym d.txt  sym g.txt  sym i.txt
src/: .clang-format  apply_rule.cpp  common.hpp  dear_imgui.hpp  docs.cpp  edit_rule.cpp  frame_main.cpp  load_rule.cpp  main.cpp  record_rule.cpp  rule.hpp  rule_algo.hpp  tile.hpp  tile_base.hpp
